# bot-sync

./: .gitignore  README.md  pyproject.toml  restore_login_config.json  restore_login_config.sample.json  rooms.json  rooms.sample.json
bot-sync/: __main__.py  write_credentials.py
